--- a/TourAgency_/CreateTour.xaml
+++ b/TourAgency_/CreateTour.xaml
@@ -5,9 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TourAgency_"
         mc:Ignorable="d"
-        Title="CreateTour" Height="1050" Width="800">
+        Title="CreateTour" Height="650" Width="1000">
     <Grid Margin="20,50,20,50">
         <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
@@ -18,10 +20,8 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
+            
+
         </Grid.RowDefinitions>
         <TextBlock
     Grid.Column="0"
@@ -59,29 +59,29 @@ TextAlignment="Right"
 FontSize="20"
 VerticalAlignment="Center"/>
         <TextBlock
-Grid.Column="0"
-Grid.Row="5"
+Grid.Column="2"
+Grid.Row="0"
 Text="Дата прибытия:"
 TextAlignment="Right"
 FontSize="20"
 VerticalAlignment="Center"/>
         <TextBlock
-Grid.Column="0"
-Grid.Row="6"
+Grid.Column="2"
+Grid.Row="1"
 Text="Дата отбытия:"
 TextAlignment="Right"
 FontSize="20"
 VerticalAlignment="Center"/>
         <TextBlock
-Grid.Column="0"
-Grid.Row="7"
+Grid.Column="2"
+Grid.Row="2"
 Text="Звёздность отеля:"
 TextAlignment="Right"
 FontSize="20"
 VerticalAlignment="Center"/>
         <TextBlock
-Grid.Column="0"
-Grid.Row="8"
+Grid.Column="2"
+Grid.Row="3"
 Text="Цена:"
 TextAlignment="Right"
 FontSize="20"
@@ -101,14 +101,14 @@ VerticalAlignment="Center"/>
     TextAlignment="Center"/>
             <TextBox 
     x:Name="Price"
-    Grid.Row="8"
-    Grid.Column="1" 
+    Grid.Row="3"
+    Grid.Column="3" 
     Margin="30,20"
     TextAlignment="Center"/>
             <TextBox 
     x:Name="HotelStarsCount"
-    Grid.Row="7"
-    Grid.Column="1" 
+    Grid.Row="2"
+    Grid.Column="3" 
     Margin="30,20"
     TextAlignment="Center"/>
         <ComboBox
@@ -134,13 +134,13 @@ VerticalAlignment="Center"/>
     SelectedValuePath="Id"/>
         <DatePicker
             x:Name="ArrivalDate"
-            Grid.Row="5"
-            Grid.Column="1"
+            Grid.Row="0"
+            Grid.Column="3"
             Margin="10"/>
         <DatePicker
     x:Name="DepartureDate"
-    Grid.Row="6"
-    Grid.Column="1"
+    Grid.Row="1"
+    Grid.Column="3"
     Margin="10"/>
 
 
@@ -149,9 +149,8 @@ VerticalAlignment="Center"/>
     x:Name="AddButton"
     Grid.Column="0"
     Grid.Row="9"
-    
-    Grid.ColumnSpan="2"
-    Margin="250, 20, 250, 20" Click="AddButton_Click">
+    Grid.ColumnSpan="4"
+    Margin="150, 20" Click="AddButton_Click">
             <TextBlock 
             Text="ОК"
             FontSize="30"/>
