--- a/TourAgency_/Views/MainWindow.xaml
+++ b/TourAgency_/Views/MainWindow.xaml
@@ -1,20 +1,59 @@
-﻿<Window x:Class="TourAgency_.MainWindow"
+﻿<Window x:Class="TourAgency_.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TourAgency_"
+        xmlns:local="clr-namespace:TourAgency_.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
-        >
+        Title="MainWindow" Height="450" Width="800">
     <Border>
         <Grid>
             <Grid.ColumnDefinitions>
 
             </Grid.ColumnDefinitions>
 
+            <Grid.RowDefinitions>
+                <RowDefinition ></RowDefinition>
+                <RowDefinition Height="6*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0" 
+                       Width="240" 
+                       HorizontalAlignment="Right">
 
-            <TabControl TabStripPlacement="Left">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition Width="3*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <Image
+                    Source="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Big_Floppa_and_Justin_2_%28cropped%29.jpg/210px-Big_Floppa_and_Justin_2_%28cropped%29.jpg"
+                    x:Name="ProfilePicture"
+                    Width="60" 
+                    Height="60" 
+                    Grid.Column="0" 
+                    Grid.RowSpan="2">
+                </Image>
+                <TextBlock 
+                    x:Name="Username" 
+                    Grid.Column="1" 
+                    Grid.Row="0" 
+                    Margin="10,0,0,0"/>
+
+
+
+                <TextBlock Grid.Column="1" Grid.Row="1" Margin="10,0,0,0">
+                    <Hyperlink Click="UserData_Click">Данные пользователя</Hyperlink>
+                </TextBlock>
+
+            </Grid>
+
+
+
+            <TabControl x:Name="TabMenu" TabStripPlacement="Left" Grid.Row="1">
 
                 <TabItem Name ="Contract">
                     <TabItem.Header>
@@ -43,21 +82,21 @@
                                 <TextBlock Text="Cохранить изменения"/>
                             </Button>-->
                             <Button 
-                            Margin="10,10,10,10"
+                            Margin="10,0,10,10"
                             Grid.Column="1"
                             Width="auto" 
                             Height="auto" Click="AddContractButton_Click">
                                 <TextBlock Text="Добавить контракт"/>
                             </Button>
                             <Button 
-                            Margin="10,10,10,10"
+                            Margin="10,0,10,10"
                             Grid.Column="2"
                             Width="auto" 
                             Height="auto" Click="UpdateContractButton_Click">
                                 <TextBlock Text="Изменить данные"/>
                             </Button>
                             <Button 
-                            Margin="10,10,10,10"
+                            Margin="10,0,10,10"
                             Grid.Column="3"
                             Width="auto" 
                             Height="auto" Click="DeleteContractButton_Click">
@@ -95,29 +134,29 @@
                                 <RowDefinition Height="50"></RowDefinition>
                                 <RowDefinition></RowDefinition>
                             </Grid.RowDefinitions>
-                            <Button 
-                Margin="10,10,10,10"
+                            <!--<Button 
+                Margin="10,0,10,10"
                 Grid.Column="0"
                 Width="auto" 
                 Height="auto" Click="SaveEmployeeDataButton_Click">
                                 <TextBlock Text="Cохранить изменения"/>
-                            </Button>
+                            </Button>-->
                             <Button 
-                Margin="10,10,10,10"
+                Margin="10,0,10,10"
                 Grid.Column="1"
                 Width="auto" 
                 Height="auto" Click="AddEmployeeButton_Click">
                                 <TextBlock Text="Добавить сотрудника"/>
                             </Button>
                             <Button 
-                Margin="10,10,10,10"
+                Margin="10,0,10,10"
                 Grid.Column="2"
                 Width="auto" 
                 Height="auto" Click="UpdateEmployeeButton_Click">
                                 <TextBlock Text="Изменить данные"/>
                             </Button>
                             <Button 
-                Margin="10,10,10,10"
+                Margin="10,0,10,10"
                 Grid.Column="3"
                 Width="auto" 
                 Height="auto" Click="DeleteEmployeeButton_Click">
@@ -153,29 +192,29 @@
                                 <RowDefinition Height="50"></RowDefinition>
                                 <RowDefinition></RowDefinition>
                             </Grid.RowDefinitions>
-                            <Button 
-                                Margin="10,10,10,10"
+                            <!--<Button 
+                                Margin="10,0,10,10"
                                 Grid.Column="0"
                                 Width="auto" 
                                 Height="auto" Click="SaveClientDataButton_Click">
                                 <TextBlock Text="Cохранить изменения"/>
-                            </Button>
+                            </Button>-->
                             <Button 
-                                Margin="10,10,10,10"
+                                Margin="10,0,10,10"
                                 Grid.Column="1"
                                 Width="auto" 
                                 Height="auto" Click="AddClientButton_Click">
                                 <TextBlock Text="Добавить клиента"/>
                             </Button>
                             <Button 
-                                Margin="10,10,10,10"
+                                Margin="10,0,10,10"
                                 Grid.Column="2"
                                 Width="auto" 
                                 Height="auto" Click="UpdateClientButton_Click">
                                 <TextBlock Text="Изменить данные"/>
                             </Button>
                             <Button 
-                                Margin="10,10,10,10"
+                                Margin="10,0,10,10"
                                 Grid.Column="3"
                                 Width="auto" 
                                 Height="auto" Click="DeleteClientButton_Click">
@@ -211,29 +250,29 @@
                                 <RowDefinition Height="50"></RowDefinition>
                                 <RowDefinition></RowDefinition>
                             </Grid.RowDefinitions>
-                            <Button 
+                            <!--<Button 
                 Margin="10,10,10,10"
                 Grid.Column="0"
                 Width="auto" 
                 Height="auto" Click="SaveTourDataButton_Click">
                                 <TextBlock Text="Cохранить изменения"/>
-                            </Button>
+                            </Button>-->
                             <Button 
-                Margin="10,10,10,10"
+                Margin="10,0,10,10"
                 Grid.Column="1"
                 Width="auto" 
                 Height="auto" Click="AddTourButton_Click">
                                 <TextBlock Text="Добавить тур"/>
                             </Button>
                             <Button 
-                Margin="10,10,10,10"
+                Margin="10,0,10,10"
                 Grid.Column="2"
                 Width="auto" 
                 Height="auto" Click="UpdateTourButton_Click">
                                 <TextBlock Text="Изменить данные"/>
                             </Button>
                             <Button 
-                Margin="10,10,10,10"
+                Margin="10,0,10,10"
                 Grid.Column="3"
                 Width="auto" 
                 Height="auto" Click="DeleteTourButton_Click">
@@ -271,21 +310,21 @@
                             </Grid.RowDefinitions>
 
                             <Button 
-                            Margin="10,10,10,10"
+                            Margin="10,0,10,10"
                             Grid.Column="1"
                             Width="auto" 
                             Height="auto" Click="AddDirectionButton_Click">
                                 <TextBlock Text="Добавить направление"/>
                             </Button>
                             <Button 
-                            Margin="10,10,10,10"
+                            Margin="10,0,10,10"
                             Grid.Column="2"
                             Width="auto" 
                             Height="auto" Click="UpdateDirectionButton_Click">
                                 <TextBlock Text="Изменить данные"/>
                             </Button>
                             <Button 
-                            Margin="10,10,10,10"
+                            Margin="10,0,10,10"
                             Grid.Column="3"
                             Width="auto" 
                             Height="auto" Click="DeleteDirectionButton_Click">
@@ -323,21 +362,21 @@
                             </Grid.RowDefinitions>
 
                             <Button 
-                                Margin="10,10,10,10"
+                                Margin="10,0,10,10"
                                 Grid.Column="1"
                                 Width="auto" 
                                 Height="auto" Click="AddTransportTypeButton_Click">
                                 <TextBlock Text="Добавить вид транспорта"/>
                             </Button>
                             <Button 
-                                Margin="10,10,10,10"
+                                Margin="10,0,10,10"
                                 Grid.Column="2"
                                 Width="auto" 
                                 Height="auto" Click="UpdateTransportTypeButton_Click">
                                 <TextBlock Text="Изменить данные"/>
                             </Button>
                             <Button 
-                                    Margin="10,10,10,10"
+                                    Margin="10,0,10,10"
                                     Grid.Column="3"
                                     Width="auto" 
                                     Height="auto" Click="DeleteTransportTypeButton_Click">
@@ -373,21 +412,21 @@
                             </Grid.RowDefinitions>
 
                             <Button 
-                            Margin="10,10,10,10"
+                            Margin="10,0,10,10"
                             Grid.Column="1"
                             Width="auto" 
                             Height="auto" Click="AddTourOperatorButton_Click">
                                 <TextBlock Text="Добавить туроператора"/>
                             </Button>
                             <Button 
-                                Margin="10,10,10,10"
+                                Margin="10,0,10,10"
                                 Grid.Column="2"
                                 Width="auto" 
                                 Height="auto" Click="UpdateTourOperatorButton_Click">
                                 <TextBlock Text="Изменить данные"/>
                             </Button>
                             <Button 
-                                Margin="10,10,10,10"
+                                Margin="10,0,10,10"
                                 Grid.Column="3"
                                 Width="auto" 
                                 Height="auto" Click="DeleteTourOperatorButton_Click">
@@ -451,6 +490,7 @@
                     </TabItem.Content>
                 </TabItem>
             </TabControl>
+            <StackPanel Grid.Row="1"/>
         </Grid>
     </Border>
 </Window>
