--- a/TourAgency_/Views/RegistrationWindow.xaml
+++ b/TourAgency_/Views/RegistrationWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="TourAgency_.RegistrationWindow"
+﻿<Window x:Class="TourAgency_.Views.RegistrationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TourAgency_"
+        xmlns:local="clr-namespace:TourAgency_.Views"
         mc:Ignorable="d"
         Title="RegistrationWindow" Height="450" Width="800">
     <Grid Margin="20,50,20,50">
