--- a/TourAgency_/App.xaml
+++ b/TourAgency_/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TourAgency_"
-             StartupUri="/Views/LoginWindow/LoginWindow.xaml">
+             Startup="main1">
     <Application.Resources>
          
     </Application.Resources>
