--- a/TourAgency_/Views/MainWindow/MainWindow.xaml
+++ b/TourAgency_/Views/MainWindow/MainWindow.xaml
@@ -4,9 +4,84 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TourAgency_.Views.MainWindow"
+        xmlns:toursListView="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.TourListView"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="MainWindow" Height="720" Width="1280">
+    <Window.Resources>
+        <ResourceDictionary>
+            <DataTemplate DataType="{x:Type toursListView:ToursListViewModel}">
+                <toursListView:ToursListView/>
+            </DataTemplate>
+        </ResourceDictionary>
+    </Window.Resources>
+    <Border>
+        <Grid Width="auto" Height="auto" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition Width="3*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition ></RowDefinition>
+                <RowDefinition Height="6*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0" 
+                  Grid.Column="1"
+                  Width="auto"
+                  Height="auto"
+                  HorizontalAlignment="Right">
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition Width="auto"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                    <Image
+                    Source="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Big_Floppa_and_Justin_2_%28cropped%29.jpg/210px-Big_Floppa_and_Justin_2_%28cropped%29.jpg"
+                    x:Name="ProfilePicture"
+                    Width="auto" 
+                    Height="auto" 
+                    Grid.Column="0" 
+                    Grid.RowSpan="3">
+                    </Image>
+                    <TextBlock 
+                    x:Name="Username" 
+                    Text="{Binding Username, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    Grid.Column="1" 
+                    Grid.Row="0" 
+                    Margin="10,0,0,0"/>
+
+                <TextBlock 
+                    x:Name="UserType" 
+                    Text="{Binding Usertype, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    Grid.Column="1" 
+                    Grid.Row="1" 
+                    Margin="10,0,0,0"/>
+
+
+
+                <TextBlock Grid.Column="1" Grid.Row="2" Margin="10,0,10,0">
+                    <Hyperlink>Данные пользователя</Hyperlink>
+                    </TextBlock>
+
+            </Grid>
+
+
+            <ContentControl
+                Grid.Row="1"
+                Grid.Column="1"
+                Width="auto"
+                Height="auto"
+                Margin="0,10,0,0"
+                Content="{Binding ChildContentView}"/>
+
+
+
+        </Grid>
+    </Border>
 </Window>
