--- a/TourAgency_/Views/MainWindow/MainWindow.xaml
+++ b/TourAgency_/Views/MainWindow/MainWindow.xaml
@@ -5,12 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TourAgency_.Views.MainWindow"
         xmlns:toursListView="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.TourListView"
+        xmlns:addTourView="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.AddTourView"
         mc:Ignorable="d"
         Title="MainWindow" Height="720" Width="1280">
     <Window.Resources>
         <ResourceDictionary>
             <DataTemplate DataType="{x:Type toursListView:ToursListViewModel}">
                 <toursListView:ToursListView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type addTourView:AddTourViewModel}">
+                <addTourView:AddTourView/>
             </DataTemplate>
         </ResourceDictionary>
     </Window.Resources>
@@ -77,8 +81,7 @@
                 Grid.Column="1"
                 Width="auto"
                 Height="auto"
-                Margin="0,10,0,0"
-                Content="{Binding ChildContentView}"/>
+                Content="{Binding ChildContentView, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
 
 
 
