childview now works yahooo

--- a/TourAgency_/Views/MainWindow/ChildViews/AddTourView/AddTourView.xaml
+++ b/TourAgency_/Views/MainWindow/ChildViews/AddTourView/AddTourView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TourAgency_.Views.MainWindow.ChildViews.AddTourView"
              mc:Ignorable="d" 
+             d:DataContext="{d:DesignInstance Type=local:AddTourViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -13,17 +14,40 @@
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        
+
         <Image Grid.Column="0"
                Grid.Row="0"
-               Width="100"
-               Height="100"
-               Source="https://sun30-1.userapi.com/impg/3mIyps5YRiesOJ5iQVNlPPO1DnjANNC3yJBKbg/PzdKBIhT4pA.jpg?size=1179x1163;quality=96;sign=6b470bd7cd2070104f6970cb702bfdd7;type=album">
-               
+               Grid.RowSpan="3"
+               Width="auto"
+               Height="auto"
+               Margin="30,0"
+               Source="{Binding Image, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
         </Image>
-        <Button>
+        <StackPanel
+            Grid.Row="0"
+            Grid.Column="1">
+            <TextBlock Text="Название тура"/>
+            <TextBox Text="{Binding Name, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                     Height="auto"
+                     Width="auto"></TextBox>
+        </StackPanel>
+
+        <StackPanel
+    Grid.Row="1"
+    Grid.Column="1">
+            <TextBlock Text="Ссылка на изображение"/>
+            <TextBox Text="{Binding Image, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        </StackPanel>
+        <Button Grid.Column="0"
+                Grid.Row="5"
+                Grid.ColumnSpan="2"
+                Margin="250,10,250,10">
             <TextBlock Text="AAAAAAAAAAAAAAAAAAAAAAAAA"/>
         </Button>
     </Grid>
